--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import type { SanityDocument } from "@sanity/client";
 import { loadQuery } from "../../sanity/lib/load-query";
-import PortableText from "../../components/PortableText..astro";
+import PortableText from "../../components/PortableText.astro";
 import SanityImage from "../../components/SanityImage.astro";
 import type { SanityPost } from "../../../types";
 
