updated ctaBtnText styling

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -54,7 +54,10 @@ const posterUrl = landing.image?.asset ? urlForImage(landing.image.asset).url() 
 	{landing.ctaText && <p class="mb-4 text-lg">{landing.ctaText}</p>}
 	{
 		landing.ctaBtnText && (
-			<button class="inline-block mb-8 px-6 py-3 bg-blue-600 text-white rounded-lg text-lg font-semibold shadow hover:bg-blue-700 transition">
+			<button class="
+			inline-block mb-8 px-6 py-3 
+			rounded-lg text-lg  bg-primary text-primary-foreground font-semibold 
+			">
 				{landing.ctaBtnText}
 			</button>
 		)
