--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,26 +1,20 @@
 ---
-import '../styles/global.css'
+import '../styles/global.css';
+import Navbar from '../components/Navbar.astro';
+const pageTitle = import.meta.env.PUBLIC_PAGE_TITLE;
 ---
 <!doctype html>
 
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro + Template</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
+		<Navbar />
 		<slot />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
